--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -17,14 +17,6 @@
 <body> 
   
     <%- include('menu'); %>
-    
-    <div id="barraIdentificacao">
-      <div id="logo"></div>
-      <div id="conteudoId"> Olá <b><span id="lblLogado"> <%= usuario %></span></b> <span>|</span> <a href="">Alterar Senha</a> <span>|</span>
-        <button type="button" id="btnSair"> Sair</button>
-      </div>
-    </div>
-
       
 <div id="conteudo"> 
 <h1> Menu Rápido </h1>
@@ -82,13 +74,13 @@
 
 <div class="item">
     <div class="imagem">
-        <a href="">
+        <a href="relatorios">
         <figure>
-                <img src='../imagens/icon-relatorio.png' alt="Relatório">
+                <img src='../imagens/icon-relatorio.png' alt="Relatórios">
         </figure></a>
     </div>
     <div class="legenda">
-       <p class="legenda"> <a href="">Relatório </a></p> 
+       <p class="legenda"> <a href="">Relatórios </a></p> 
     </div>
 </div>
 
