--- a/server/views/relatorio.ejs
+++ b/server/views/relatorio.ejs
@@ -29,73 +29,77 @@
     <button id="btnInprimir">Imprimir</button>
 </form>
 </div>
+
 <script>
 
-  function geraPdf(produtos){
-      var dados = JSON.parse(produtos);
+    function geraPdf(produtos){
+        var dados = JSON.parse(produtos);
 
-      var externalDataRetrievedFromServer = dados.map(i => ({ 
-          Código:i.estoque_cd_produto,
-          Descrição:i.ds_produto,
-          Quantidade: i.qt_soma
-      }));
+        var externalDataRetrievedFromServer = dados.map(i => ({ 
+            Código:i.estoque_cd_produto,
+            Descrição:i.ds_produto,
+            Quantidade: i.qt_soma
+        }));
 
-      function buildTableBody(data, columns) {
-          var body = [];
+        function buildTableBody(data, columns) {
+            var body = [];
 
-          body.push(columns);
+            body.push(columns);
 
-          data.forEach(function(row) {
-              var dataRow = [];
-              columns.forEach(function(column) {
-              dataRow.push(row[column].toString());
-              })
+            data.forEach(function(row) {
+                var dataRow = [];
+                columns.forEach(function(column) {
+                dataRow.push(row[column].toString());
+                })
 
-          body.push(dataRow);
-      });
+            body.push(dataRow);
+        });
 
-      return body;
-      }
+        return body;
+        }
 
-      function table(data, columns) {
-          return {
-              table: {
-              headerRows: 1,
-              widths: [ 100, '*', 'auto'],
-              body: buildTableBody(data, columns),
-        },
-      
-              footer: function(currentPage, pageCount) { 
-                  return currentPage.toString() + ' of ' + pageCount; },
-              };
-          }
+    function table(data, columns) {
+        return {
+            table: {
+            headerRows: 1,
+            body: buildTableBody(data, columns),
+			      },
+            footer: function(currentPage, pageCount) { 
+                return currentPage.toString() + ' of ' + pageCount; },
+            layout: {
+				        fillColor: function (i, node) {
+					          return (i % 2 === 0) ? '#CCCCCC' : null;
+				        }
+            }
+        };
+    }
 
-  var dd = {
-      pageSize: 'A4',
-      // [left, top, right, bottom] or [horizontal, vertical] 
-      pageMargins: [ 40, 60, 40, 60 ],
-      content: [
-          { text: 'Relatório', style: 'header' },
-          table(externalDataRetrievedFromServer, ['Código', 'Descrição','Quantidade']),
-      ],
+    var dd = {
+        pageSize: 'A4',
+        // [left, top, right, bottom] or [horizontal, vertical] 
+        pageMargins: [ 40, 60, 40, 60 ],
+        content: [
+            { text: 'Relatório', style: 'header' },
+            table(externalDataRetrievedFromServer, ['Código', 'Descrição','Quantidade']),
+        ],
 
-      styles: {
-          header: {
-              fontSize: 18,
-              bold: true,
-              margin: [20, 20, 0, 20],
-              alignment: 'center'
-          },
+        styles: {
+            header: {
+                fontSize: 18,
+                bold: true,
+                margin: [20, 20, 0, 20],
+                alignment: 'center'
+            },
 
-          items: {
-              alignment: 'center'
-          },
-      }
-  }   
+            items: {
+                alignment: 'center'
+            },
+        }
+    }   
 
-  pdfMake.createPdf(dd).open();
-  // download the PDF
-  pdfMake.createPdf(dd).download('relatorio.pdf');
-  }
-  
+    pdfMake.createPdf(dd).open();
+    // download the PDF
+    pdfMake.createPdf(dd).download('relatorio.pdf');
+    }
+    
 </script>
