--- a/server/views/relatorioFornecedores.ejs
+++ b/server/views/relatorioFornecedores.ejs
@@ -23,22 +23,19 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.28/vfs_fonts.js"></script>  
 
 
-<title>Bazar Olimpio | Home</title>
+<title>Bazar Olimpio | Relatórios</title>
 </head>
 
 <body> 
   <%- include('menu'); %>
   
-  <div id="barraIdentificacao">
-    <div id="logo"></div>
-    <div id="conteudoId"> Olá, <b><span id="lblLogado">  <%= usuario %> </span></b> <span>|</span> <a href="">Alterar Senha</a> <span>|</span>
-      <button type="button" id="btnSair"> Sair</button>
-    </div>
-  </div>
 
       <div id="conteudo">
 
-          <h1>Todos os Fornecedores</h1>
+<h1>Fornecedores</h1>
+<br>
+          <h2>Fornecedores</h2>
+          <br>
 
           <form onsubmit="return false;">
               <table class="table">
