--- a/server/views/relatorios.ejs
+++ b/server/views/relatorios.ejs
@@ -25,18 +25,12 @@
     <script src="http://ui-grid.info/release/ui-grid-unstable.js"></script>
 
 
-<title>Bazar Olimpio | Home</title>
+<title>Bazar Olimpio | Relatórios</title>
 </head>
 
 <body> 
   <%- include('menu'); %>
   
-  <div id="barraIdentificacao">
-    <div id="logo"></div>
-    <div id="conteudoId"> Olá, <b><span id="lblLogado">  <%= usuario %> </span></b> <span>|</span> <a href="">Alterar Senha</a> <span>|</span>
-      <button type="button" id="btnSair"> Sair</button>
-    </div>
-  </div>
 
       <div id="conteudo">
       <h1>Relatórios</h1>
