--- a/server/views/menu.ejs
+++ b/server/views/menu.ejs
@@ -29,7 +29,9 @@
 
               <li><a href="/relatorios/relatorio/todosprodutos" class="lnkSubItem subitem" > Todos os produtos </a> </li>
               <li><a href="/relatorios/relatorio/todosfornecedores" class="lnkSubItem subitem" > Todos os fornecedores </a> </li>
-              <li><a href="#" class="lnkSubItem subitem" > Produtos Comprados </a> </li>
+              <li><a href="#" class="lnkSubItem subitem" > Compras de Produtos </a> </li>
+              <li><a href="#" class="lnkSubItem subitem" > Vendas </a> </li>
+
             </ul>
           </li>
           
