--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -18,7 +18,7 @@
 
 <form id="formulario" method="POST" >
 
-<div id="icon-user"></div><input id="txtNome" name="txtNome" class="inputText"  required placeholder="EMAIL"> <div class="clear"></div>
+<div id="icon-user"></div><input id="txtNome" name="txtNome" class="inputText"  required placeholder="Nome"> <div class="clear"></div>
 
 <div id="icon-password"></div><input id="txtSenha" name="txtSenha" class="inputText" type="password" required placeholder="SENHA">
 <div class="clear"></div>
